# nse-analytics

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.frontend  Dockerfile.nse  README.md  add_kplc.py  add_trades.py  advanced_algorithms.py  analyzer.py  backfill_nse_history.py  backtester.py  chart_generator.py  check_brit.py  check_db_creation.py  check_depth_auth.py  check_ex_kpc.py  check_ex_kpc_manual.py  check_picks.py  check_portfolio.py  check_system.py  comprehensive_analyzer.py  dashboard_server.py  data_collector.py  data_fetcher.py  database.py  debug_alerts.py  debug_bot.py  debug_routes.py  dividend_calendar.py  docker-compose.production.yml  docker-compose.yml  download_history.py  financials.py  history_generator.py  import_data.py  inspect_html.py  main.py  market_hours.py  (+21 more)
data/history/: ABSA.csv  BRIT.csv  KPLC.csv  SCOM.csv  mendeley_nse_2023_2024.csv
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  api.js  charts.jsx  data.js  icons.jsx  index.css  ui.jsx
frontend/src/components/: Navbar.jsx  NotificationCenter.jsx  StockModal.jsx  TradeModal.jsx
frontend/src/pages/: Account.jsx  Admin.jsx  Analytics.jsx  Dashboard.jsx  DataScience.jsx  Login.jsx  News.jsx  Portfolio.jsx
nse_backend/: Dockerfile  docker-compose.yml  migrate_data.py  requirements.txt
nse_backend/api/: admin.py  models.py  mpesa.py  permissions.py  serializers.py  services.py  urls.py  views.py
nse_backend/config/: settings.py
templates/: dashboard.html  datascience.html  portfolio.html
(+3 files in other folders)
