[tool.poetry]
name = "nse-pro"
version = "0.1.0"
description = ""
authors = ["Nmwaura-Data <nmwaura@optiven.co.ke>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=5.0,<5.1"
flask = ">=3.0.0"
flask-cors = ">=4.0.0"
django-cors-headers = ">=4.4.0"
djangorestframework = ">=3.15.0"
djangorestframework-simplejwt = ">=5.3.0"
mysqlclient = ">=2.2.4"
psycopg2-binary = ">=2.9.0"
pandas = "^3.0.1"
numpy = "^2.4.2"
yfinance = "^1.2.0"
scikit-learn = "^1.8.0"
scipy = "^1.17.1"
python-telegram-bot = {version = ">=21.0", extras = ["job-queue"]}
requests = "^2.32.5"
python-dotenv = "^1.2.1"
matplotlib = "^3.10.8"
sqlalchemy = "^2.0.47"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"
playwright = ">=1.44.0"
beautifulsoup4 = ">=4.12.0"
browser-use = ">=0.1.0"
langchain-openai = ">=0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
